--- a/style.css
+++ b/style.css
@@ -1,111 +1,220 @@
-body {
-    font-family: 'Roboto mono';
-    min-height: calc(100vh);
-    width: calc(100vw);
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
     border: 0;
+    overflow-x: hidden;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    width: 100%;
+    font-family: "inter", "JetBrains Mono";
+    min-height: 100vh;
+    font-size: 1rem;
+}
+
+h2 {
+    font-size: 4rem;
+    font-weight: 400;
+}
+
+/* Link */
+
+#nav {
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    height: 1.2rem;
+}
+
+#name {
+    color: black;
+    position: fixed;
+    text-decoration: none;
+    z-index: 99;
+}
+
+#hero {
+    height: calc(100vh - 2.7rem);
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #FBEF7A;
+    padding: 0rem 0.5rem;
+    background-image: url("./techforthai.gif");
+    background-origin: content-box;
+    background-size: cover;
+    background-position-x: 55%;
+    background-repeat: no-repeat;
+}
+
+#link {
+    position: fixed;
+    margin-top: 0.5rem;
+    margin-left: calc(100% - 6rem);
+
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+
+    padding-right: 3rem;
+    font-size: 1.2rem;
+
+    z-index:99;
 }
 
-ul {
-    padding: 0;
-}
-
-li {
-    display: inline-block;
-    list-style-type: none;
-    padding-left: 30px;
-}
-
-.invisible{
-    display: none;
-}
-
-#text {
-    font-size: 30px;
-}
-
-#under {
-    color: #353535;
-    font-size: 16px;
-    padding-top: 10px;
-    padding-bottom: 40px;
-}
-
-#hidden {
-    color: #ED433D;
-}
-
-#countdown {
-    color: #3C4F7F;
-}
-
-a {
-    color: black;
+#link>a {
     text-decoration: none;
+    color: black;
 }
 
-a:hover {
+#link>a:hover {
+    color: #ffc45d;
     text-decoration: underline;
 }
 
-#footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+section {
+    padding: 1rem 0.5rem;
+}
+
+/* Section: Introduction */
+
+section#introduction {
+    display: flex;
+    flex-direction: row;
+}
+
+section#introduction>div{
+    width: 30%;
+    padding-right: 3rem;
+    text-overflow: ellipsis;
+}
+
+/* Section: Works */
+
+.gallary {
+    padding-top: 1rem;
+}
+
+
+div.img {
+    position:relative;
+    width: calc(33.3% - 0.25rem);
+    height: 40vw;
+    margin-bottom: 0.5rem;
+    background: salmon;
+    overflow: hidden;
+    transition: opacity .2s;
+}
+
+div.img:hover {
+    opacity: 0.8;
+    /* box-shadow: 0.5rem 0.5rem 0.5rem -0.5rem rgba(0,0,0,0.5); */
+}
+
+div.img>img {
     width: 100%;
-    padding-bottom: 20px;
-    text-align: center;
+    height: 100%; 
+    object-fit: cover;
 }
 
-@media only screen and (max-width: 540px) {
-    #text {
-        font-size: 18px;
-    }
-
-    #under {
-        font-size: 12px;
-        padding-top: 10px;
-        padding-bottom: 20px;
-    }
-
-    #footer {
-        font-size: 12px;
-    }
-
-    li {
-        padding-left: 0;
-        padding-right: 0;
-        display: block;
-        font-size: 16px;
-        margin: 20px;
-    }
-
-    ul {
-        border-left: thin solid black;
-    }
+.gallary>div.gallary-highlight {
+    overflow: hidden;
 }
 
-@media only screen and (max-width: 376px) {
-    #text {
-        font-size: 16px;
+.gallary>div.gallary-highlight>div.img {
+    width: 100%;
+    height: 50vw;
+    margin-bottom: 0.5rem;
+    overflow: hidden;
+}
+
+.gallary>div.gallary-row-3 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.gallary>div.gallary-row-2, .gallary>div.gallary-row-2-right {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.gallary>div.gallary-row-2>div.img:nth-child(1) {
+    width: calc(66.6% - 0.25rem);
+}
+
+.gallary>div.gallary-row-2-right>div.img:nth-child(2) {
+    width: calc(66.6% - 0.25rem);
+}
+
+/* Section: Contact */
+.wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* Section: Footer */
+
+footer {
+    padding: 0rem 0.5rem 0.5rem 0.5rem;
+}
+
+@media only screen and (max-width: 800px) {
+    #nav {
+        font-size: 1rem;
+        margin: 0.5rem;
     }
 
-    #under {
-        font-size: 10px;
+    #name, #link {
+        font-size: 1rem;
     }
 
-    #footer {
-        font-size: 10px;
+    #link {
+        top: 3rem;
+        margin-left: calc(100% - 4.5rem);
     }
 
-    li {
-        font-size: 12px;
-        margin: 15px;
+    section#introduction { 
+        flex-direction: column;
+        padding-bottom: 0;
+    }
+
+    section#introduction>div {
+        width: 100%;
+        padding-bottom: 1rem;
+    }
+
+    .gallary {
+        flex-direction: column;
+    }
+
+    .gallary>div.gallary-row-2>div.img:nth-child(1) {
+        width: 100%;
+    }
+
+    .gallary>div.gallary-row-2-right>div.img:nth-child(2) {
+        width: 100%;
+    }
+
+    .gallary>div.gallary-highlight>div.img {
+        height: 70vw;
+    }
+
+    div.img {
+        width: 100%;
+        height: 70vw;
+    }
+    
+    h2 {
+        padding-bottom: 0.5rem;
     }
 }
