--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     font-family: "inter", "JetBrains Mono";
     min-height: 100vh;
     font-size: 1rem;
+    background: black;
+    color: white;
 }
 
 h2 {
@@ -24,16 +26,37 @@ h2 {
 /* Link */
 
 #nav {
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     font-size: 1.2rem;
     height: 1.2rem;
 }
 
 #name {
     color: black;
+    filter: invert(1);
     position: fixed;
     text-decoration: none;
     z-index: 99;
+    mix-blend-mode: difference;
+    filter: invert(1);
+}
+
+#name:hover {
+    color: white;
+    background: black;
+}
+
+#quote {
+    position: absolute;
+    bottom: 2rem;
+    left: 1rem;
+    padding-right: 1rem;
+    font-size: 7rem;
+    color: black;
+    mix-blend-mode: difference;
+    filter: invert(1);
+    letter-spacing: -0.1rem;
+    word-wrap: none;
 }
 
 #hero {
@@ -42,7 +65,7 @@ h2 {
     justify-content: center;
     align-items: center;
     padding: 0rem 0.5rem;
-    background-image: url("./techforthai.gif");
+    background-image: url("./saturnv.gif");
     background-origin: content-box;
     background-size: cover;
     background-position-x: 55%;
@@ -61,18 +84,23 @@ h2 {
 
     padding-right: 3rem;
     font-size: 1.2rem;
+    mix-blend-mode: difference;
 
-    z-index:99;
+    z-index: 99;
 }
 
 #link>a {
     text-decoration: none;
     color: black;
+    filter: invert(1);
+    mix-blend-mode: difference;
 }
 
 #link>a:hover {
-    color: #ffc45d;
+    color: white;
+    background: black;
     text-decoration: underline;
+    mix-blend-mode: normal;
 }
 
 section {
@@ -86,7 +114,7 @@ section#introduction {
     flex-direction: row;
 }
 
-section#introduction>div{
+section#introduction>div {
     width: 30%;
     padding-right: 3rem;
     text-overflow: ellipsis;
@@ -100,24 +128,60 @@ section#introduction>div{
 
 
 div.img {
-    position:relative;
+    position: relative;
     width: calc(33.3% - 0.25rem);
     height: 40vw;
     margin-bottom: 0.5rem;
     background: salmon;
     overflow: hidden;
-    transition: opacity .2s;
+    transition: transform .3s;
 }
 
 div.img:hover {
-    opacity: 0.8;
+    transform: scale(1.01);
     /* box-shadow: 0.5rem 0.5rem 0.5rem -0.5rem rgba(0,0,0,0.5); */
 }
 
-div.img>img {
+div.img:hover .text-img {
+    /*font-size: 10rem;*/
+    color: black;
+    display: none;
+    /* box-shadow: 0.5rem 0.5rem 0.5rem -0.5rem rgba(0,0,0,0.5); */
+}
+
+div.img:hover .text-img-description {
+    /*font-size: 10rem;*/
+    color: black;
+    font-size: 1.5;
+    display: inline-block;
+    /* box-shadow: 0.5rem 0.5rem 0.5rem -0.5rem rgba(0,0,0,0.5); */
+}
+
+div.img>img, div.img>a>img {
     width: 100%;
-    height: 100%; 
+    height: 100%;
     object-fit: cover;
+}
+
+div.text-img {
+    color: black;
+    position: absolute;
+    font-size: 2rem;
+    padding-right: 1rem;
+    bottom: 1rem;
+    left: 1rem;
+    filter: invert(1);
+}
+
+div.text-img-description {
+    display: none;
+    color: black;
+    position: absolute;
+    font-size: 1rem;
+    padding-right: 1rem;
+    bottom: 1rem;
+    left: 1rem;
+    filter: invert(1);
 }
 
 .gallary>div.gallary-highlight {
@@ -139,7 +203,8 @@ div.img>img {
     overflow: hidden;
 }
 
-.gallary>div.gallary-row-2, .gallary>div.gallary-row-2-right {
+.gallary>div.gallary-row-2,
+.gallary>div.gallary-row-2-right {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -174,7 +239,8 @@ footer {
         margin: 0.5rem;
     }
 
-    #name, #link {
+    #name,
+    #link {
         font-size: 1rem;
     }
 
@@ -183,7 +249,12 @@ footer {
         margin-left: calc(100% - 4.5rem);
     }
 
-    section#introduction { 
+    #quote {
+        font-size: 3.5rem;
+        bottom: 1rem
+    }
+
+    section#introduction {
         flex-direction: column;
         padding-bottom: 0;
     }
@@ -213,7 +284,7 @@ footer {
         width: 100%;
         height: 70vw;
     }
-    
+
     h2 {
         padding-bottom: 0.5rem;
     }
