--- a/src/app.css
+++ b/src/app.css
@@ -21,11 +21,11 @@ h2 {
 }
 
 h6 {
-  @apply font-sans text-xl pt-2 pb-4;
+  @apply font-sans text-lg md:text-xl pt-2 pb-4;
 }
 
 p {
-  @apply font-serif text-xl md:text-3xl lg:text-5xl pb-2 lg:pb-6 lg:leading-tight tracking-tight;
+  @apply font-serif text-xl md:text-3xl lg:text-5xl pb-2 lg:pb-6 lg:leading-tight tracking-tight text-justify;
 }
 
 a {
