--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,10 @@
 ---
 const today = new Date();
+const drink = ["🧋", "🍸", "☕️", "🍵", "🍺", "🔥", "❤️"][
+  Math.floor(Math.random() * 7)
+];
 ---
 
-<footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+<footer class="pc py-3 flex justify-center items-center">
+  &copy; {today.getFullYear()} | made with {drink} by pub.
 </footer>
-<style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
-</style>
