--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,108 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import Card from "../components/Card.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <Header title={SITE_TITLE} />
+    <main class="pc grid gap-8">
+      <h1 class="text-3xl border-y border-black py-3 font-medium pr-2">
+        hi! my name is pub. i'm an interdisciplinary maker based in bangkok,
+        thailand.
+      </h1>
+      <div>
+        <div class="grid md:grid-cols-3 gap-3">
+          <Card image="spaceth.jpeg" name="spaceth.co" />
+          <Card image="grtn.jpeg" name="creatorsgarten" />
+          <div
+            class="pr-3 md:px-3 items-center justify-center flex text-lg md:text-base"
+          >
+            I'm currently working as a curator at creatorsgarten collective, and
+            as an editor-in-chief at spaceth.co
+          </div>
+        </div>
+      </div>
+      <div class="grid gap-3">
+        <div class="flex justify-between items-end border-b border-black">
+          <h2 class="text-2xl font-medium">works</h2>
+          <h2 class="text-lg">more →</h2>
+        </div>
+        <div class="grid md:grid-cols-3 gap-3">
+          <!-- <Card />
+          <Card />
+          <Card />
+          <Card />
+          <Card />
+          <Card /> -->
+          {
+            [
+              ["starstuff", "starstuff.png"],
+              ["messe", "messe.jpeg"],
+              ["book", "book.jpeg"],
+              ["bangkok open source hackathon", "bosh.webp"],
+              ["chasing new horizons", "pluto.jpeg"],
+              ["stupid hackathon in thailand", "sht7.jpeg"],
+            ].map(([name, image]) => {
+              return <Card name={name} image={image} />;
+            })
+          }
+        </div>
+        <ul
+          class="hidden md:flex w-full justify-between py-1 border-t border-black"
+        >
+          <li>codes</li>
+          <li>peoples</li>
+          <li>contents</li>
+          <li>events</li>
+          <li>arts & lives</li>
+          <li>side projects</li>
+        </ul>
+      </div>
+      <div class="bg-neutral-900 p-4 text-white">
+        <div class="grid md:grid-cols-3 gap-y-4 text-xl">
+          <!-- <Card />
+          <Card />
+          <Card /> -->
+          <div class="flex md:justify-center md:items-center">
+            📚 personal blog ↗
+          </div>
+          <div class="flex md:justify-center md:items-center">📸 gallery ↗</div>
+          <div class="flex md:justify-center md:items-center">
+            🪴 digital garden ↗
+          </div>
+        </div>
+      </div>
+      <div class="grid gap-3">
+        <div class="flex justify-between items-end border-b border-black">
+          <h2 class="text-2xl font-medium">displays</h2>
+          <h2 class="text-lg">more →</h2>
+        </div>
+        <div class="grid md:grid-cols-3 gap-3">
+          <Card name="ted x utcc" image="ted.jpeg" />
+          <Card name="science odyssey" image="book.jpeg" />
+          <Card
+            name="the 15th thailand olympiad in informatics"
+            image="toi15.webp"
+          />
+        </div>
+        <ul
+          class="hidden md:flex w-full justify-between py-1 border-t border-black"
+        >
+          <li>talks & panels</li>
+          <li>interviews</li>
+          <li>lectures</li>
+          <li>awards & speeches</li>
+        </ul>
+      </div>
+    </main>
+    <Footer />
+  </body>
 </html>
