--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,8 +19,8 @@ import { SITE_TITLE } from "../consts";
   <div><a href="/">madeby.pub</a></div>
   <ul class="flex gap-1">
     <li><a href="works">works</a></li>
-    <li><a href="">displays</a></li>
-    <li><a href="">me</a></li>
+    <li><a href="appearances">appearances</a></li>
+    <li><a href="pub">pub</a></li>
   </ul>
 </header>
 
