--- a/src/components/PubLinks.astro
+++ b/src/components/PubLinks.astro
@@ -3,10 +3,18 @@
     <!-- <Card />
       <Card />
       <Card /> -->
-    <div class="flex md:justify-center md:items-center">📚 personal blog ↗</div>
-    <div class="flex md:justify-center md:items-center">📸 gallery ↗</div>
-    <div class="flex md:justify-center md:items-center">
-      🪴 digital garden ↗
-    </div>
+    <div class="pub-link"><a href="">📚 personal blog ↗</a></div>
+    <div class="pub-link"><a href="">📸 gallery ↗</a></div>
+    <div class="pub-link"><a href="garden">🪴 digital garden ↗</a></div>
   </div>
 </div>
+
+<style>
+  .pub-link {
+    @apply flex md:justify-center md:items-center;
+  }
+
+  .pub-link > a {
+    @apply hover:bg-transparent hover:underline;
+  }
+</style>
