--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,9 +16,26 @@
   color: #444;
 } */
 
+@font-face {
+  font-family: "Basier Circle";
+  src: url("fonts/basier-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: regular;
+}
+
+@font-face {
+  font-family: "Basier Circle";
+  src: url("fonts/basier-medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: regular;
+}
+
 body {
   min-height: 100dvh;
-  font-family: "Basier Circle", Verdana, sans-serif;
+  font-family: "Basier Circle", "Inter", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 400;
   @apply mx-auto px-3 sm:px-4 lg:px-6 bg-gradient-to-b from-neutral-50 to-neutral-100 text-neutral-900;
 }
 
