feat: add expanded list

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,6 +21,7 @@ import { SITE_TITLE } from "../consts";
     <li><a href="works">works</a></li>
     <li><a href="appearances">appearances</a></li>
     <li><a href="pub">pub</a></li>
+    <li><a href="garden">🪴</a></li>
   </ul>
 </header>
 
