--- a/src/components/PubLinks.astro
+++ b/src/components/PubLinks.astro
@@ -3,8 +3,12 @@
     <!-- <Card />
       <Card />
       <Card /> -->
-    <div class="pub-link"><a href="">📚 personal blog ↗</a></div>
-    <div class="pub-link"><a href="">📸 gallery ↗</a></div>
+    <div class="pub-link">
+      <a href="https://www.medium.com/@chayapatr">📚 personal blog ↗</a>
+    </div>
+    <div class="pub-link">
+      <a href="https://www.instagram.com/chayapatr">📸 gallery ↗</a>
+    </div>
     <div class="pub-link"><a href="garden">🪴 digital garden ↗</a></div>
   </div>
 </div>
