--- a/src/pages/appearances.astro
+++ b/src/pages/appearances.astro
@@ -119,7 +119,7 @@ const appearances = {
     <Header title={SITE_TITLE} />
     <main class="pc grid gap-8 mb-3">
       <h1 class="text-3xl border-y border-black py-3 font-medium pr-2">
-        pub's appearances
+        🦕 pub's appearances
       </h1>
       {
         Object.entries(appearances).map(([k, v]) => {
