--- a/src/pages/garden.astro
+++ b/src/pages/garden.astro
@@ -6,7 +6,7 @@ import GardenList from "../components/ExpandedList.svelte";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import List from "../components/List.svelte";
 
-const post = await Astro.glob("../content/blog/*");
+const post = await Astro.glob("../content/garden/*");
 ---
 
 <!DOCTYPE html>
