--- a/src/pages/e/[...slug].astro
+++ b/src/pages/e/[...slug].astro
@@ -1,20 +1,45 @@
 ---
-import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import { type CollectionEntry, getCollection } from "astro:content";
+// import BlogPost from "../../layouts/BlogPost.astro";
+
+import BaseHead from "../../components/BaseHead.astro";
+import Footer from "../../components/Footer.astro";
+import Menu from "../../components/Menu.astro";
+import History from "../../components/History.svelte";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
-	}));
+  const posts = await getCollection("garden");
+  return posts.map((post) => ({
+    params: { slug: post.slug },
+    props: post,
+  }));
 }
-type Props = CollectionEntry<'blog'>;
+// type Props = CollectionEntry<"blog">;
 
 const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<BlogPost {...post.data}>
-	<Content />
-</BlogPost>
+<!doctype html>
+<html lang="en">
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <!-- <Header title={SITE_TITLE} /> -->
+    <main class="grid gap-4">
+      <Menu cur="Entry" />
+      <h2 class="text-4xl">
+        {post.data.title}
+      </h2>
+      <div class="prose prose-lg">
+        <!-- <BlogPost {...post.data}> -->
+        <Content />
+        <!-- </BlogPost> -->
+      </div>
+    </main>
+    <History client:load />
+    <Footer />
+  </body>
+</html>
