--- a/src/pages/pub.astro
+++ b/src/pages/pub.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import Menu from "../components/Menu.astro";
+import History from "../components/History.svelte";
 
 import { Content } from "../content/main/pub.md";
 
@@ -175,6 +176,7 @@ const appearances = {
         </ul>
       </div>
     </main>
+    <History client:load />
     <Footer />
     <style>
       li > a {
