--- a/src/pages/pub.astro
+++ b/src/pages/pub.astro
@@ -1,8 +1,5 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import BaseLayout from "../layouts/BaseLayout.astro";
 import Menu from "../components/Menu.astro";
 import History from "../components/History.svelte";
 
@@ -114,13 +111,7 @@ const appearances = {
 };
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <!-- <Header title={SITE_TITLE} /> -->
+<BaseLayout>
     <main class="grid gap-4">
       <Menu dir="pub" />
       <div class="prose prose-lg">
@@ -176,12 +167,11 @@ const appearances = {
         </ul>
       </div>
     </main>
-    <History client:load />
-    <Footer />
-    <style>
+
+</BaseLayout>
+
+<style>
       li > a {
         @apply px-1;
       }
     </style>
-  </body>
-</html>
