--- a/src/pages/e/[...slug].astro
+++ b/src/pages/e/[...slug].astro
@@ -29,7 +29,7 @@ const { Content } = await post.render();
   <body>
     <!-- <Header title={SITE_TITLE} /> -->
     <main class="grid gap-4">
-      <Menu cur="Entry" />
+      <Menu cur="(Back to Entries)" url="/e" />
       <h2 class="text-4xl">
         {post.data.title}
       </h2>
