--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,21 +6,34 @@ import Draggable from "../components/Draggable.svelte"
 
 import { Content } from "../content/main/stories.mdx";
 
-// const posts = await Astro.glob('../content/main/(pub.md|crafts.mdx)');
+const posts = await Astro.glob('../content/garden/*.md');
 ---
+
+<script is:inline>
+    console.log(document, window)
+</script>
 
 <BaseLayout>
     <main class="grid gap-4">
         <Menu dir="stories" />
         <div class="prose prose-lg">
-        <Content components={{ Gallery }} />
+            <Content components={{ Gallery }} />
+        </div>
+        <div class="hidden xl:block">
+            <Draggable x={30} y={520} p={2} client:load>
+                <div class="grid gap-4 ">
+                    <div>This is me!</div>
+                    <img src="ted.jpeg" class="w-48 rounded-sm" />
+                </div>
+            </Draggable>
         </div>
     </main>
 </BaseLayout>
 
-{ /* posts.map(post =>
+{ /* posts.map((post) =>
     <Draggable show={true} client:load >
         <main class="prose prose-lg">
             {<post.Content components={{ Gallery }} />}
         </main>
-    </Draggable>) */}
+    </Draggable>
+) */ }
