--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,5 +1,5 @@
 ---
-const { dir, cur } = Astro.props;
+const { dir, cur, url } = Astro.props;
 ---
 
 <div class="flex flex-col gap-4 mt-2">
@@ -19,7 +19,7 @@ const { dir, cur } = Astro.props;
     {
       cur ? (
         <li class="selected">
-          <a href="#">{cur}</a>
+          <a href={url ?? "#" }>{cur}</a>
         </li>
       ) : null
     }
