--- a/src/pages/e/index.astro
+++ b/src/pages/e/index.astro
@@ -1,38 +1,43 @@
 ---
-import BaseHead from "../../components/BaseHead.astro";
-import Footer from "../../components/Footer.astro";
 import Menu from "../../components/Menu.astro";
-import History from "../../components/History.svelte";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
+import Draggable from "../../components/Draggable.svelte";
+import BaseLayout from "../../layouts/BaseLayout.astro"
 
 import { getCollection } from "astro:content";
 
 const posts = await getCollection("garden").then(y => y.filter(x => x.id.split("/").length === 1 || x.id.split("/")[1] === "index.md"))
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <!-- <Header title={SITE_TITLE} /> -->
+<BaseLayout>
     <main class="grid gap-4">
-      <Menu cur="List" />
+      <Menu cur="Entries" />
       <div class="prose prose-lg">
         <h2>Page Lists</h2>
-        <ul>
-          {
-            posts.map((x) => (
-              <li>
-                <a href={`/e/${x.slug}`}>{x.data.title}</a>
-              </li>
-            ))
-          }
-        </ul>
+        <div class="prose prose-lg relative md:my-8">
+          <div class="opacity-100 md:opacity-0">
+              <ul>
+                {
+                  posts.map((x) => (
+                    <li>
+                      <a href={`/e/${x.slug}`}>{x.data.title}</a>
+                    </li>
+                  ))
+                }
+              </ul>
+          </div>
+          <div class="hidden md:block" aria-hidden="true">
+            <Draggable x={-10} y={-15} color="bg-gray-50" client:load>
+                <ul>
+                  {
+                    posts.map((x) => (
+                      <li>
+                        <a href={`/e/${x.slug}`}>{x.data.title}</a>
+                      </li>
+                    ))
+                  }
+                </ul>
+            </Draggable>
+          </div>
       </div>
     </main>
-    <History client:load />
-    <Footer />
-  </body>
-</html>
+</BaseLayout>
