--- a/src/pages/e/[...slug].astro
+++ b/src/pages/e/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-// import BlogPost from "../../layouts/BlogPost.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
@@ -21,13 +21,7 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <!-- <Header title={SITE_TITLE} /> -->
+<BaseLayout>
     <main class="grid gap-4">
       <Menu cur="(Back to Entries)" url="/e" />
       <h2 class="text-4xl">
@@ -39,7 +33,4 @@ const { Content } = await post.render();
         <!-- </BlogPost> -->
       </div>
     </main>
-    <History client:load />
-    <Footer />
-  </body>
-</html>
+</BaseLayout>
